--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -1,8 +1,3 @@
-.container {
-  max-height: 100vh;
-  height: 100%;
-}
-
 .filter {
   display: flex;
   flex-direction: column;
